--- a/_layouts/template-index.html
+++ b/_layouts/template-index.html
@@ -138,44 +138,37 @@ layout: default
       <h2 class="c-title c-title--border u-margin-bottom u-text-center">Open data en tools</h2>
       <div class="o-layout u-divider-top">
         <div class="o-layout__item u-1/3@medium">
-          <h3 class="c-small-title">Duidelijke data</h3>
-          <p class="c-para-small">Data die rechtstreeks te maken heeft met milieu en haar problematieken:</p>
+          <h3 class="c-small-title">Alles over bezoeken</h3>
+          <p class="c-para-small">Alle Brugse cultuurhuizen gebruiken hetzelfde systeem om bezoekers te registreren. Hier kunnen we welke voorstellingen of optredens mensen gaan bekijken zijn: van Concertgebouw over Stadschouwburg tot Biekorf. </p>
+          <p class="c-para-small">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden proper opgelijst met metadata en al!
+</p>
+          <p class="c-para-small">In 2015 deed Ugent een bevraging van iedereen die langskwam en daar komen we meer te weten over de levensstijl van de bezoekers
+ </p>
+
           <ul class="o-list-bare c-list-small">
-            <li class="c-list-small__item"><a href="https://www.vmm.be/lucht" target="_blank" class="c-link c-link--faux">Luchtkwaliteit{% include atom.icon.html value="external" %}</a> metingen afkomstig van <a href="https://www.brugge.be/open-data-milieu-natuur#lk" target="_blank" class="c-link c-link--faux">de meetfiets (mobiel){% include atom.icon.html value="external" %}</a> en van vaste meetpunten. Maar ook <a href="https://www.brugge.be/seapdefpdf" target="_blank" class="c-link c-link--faux">de CO2 uitstoot{% include atom.icon.html value="external" %}</a></li>
-            <li class="c-list-small__item">Waterkwaliteit: <a href="https://www.vmm.be/water/afvalwater/meetresultaten" target="_blank" class="c-link c-link--faux">alles over afvalwater{% include atom.icon.html value="external" %}</a></li>
-            <li class="c-list-small__item">Geluidsoverlast: <a href="https://www.lne.be/geluidsbelastingkaarten" target="_blank" class="c-link c-link--faux">Overlastkaarten{% include atom.icon.html value="external" %}</a></li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-milieu-natuur#wt" target="_blank" class="c-link c-link--faux">Windturbines {% include atom.icon.html value="external" %}</a> locaties van de windturbines op het grondgebied.</li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-mobiliteit#lp" target="_blank" class="c-link c-link--faux">Laadpalen {% include atom.icon.html value="external" %}</a> locatie van de aanwezige en geplande elektrische laadpalen voor auto’s.</li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-milieu-natuur#afval" target="_blank" class="c-link c-link--faux">Afvalophaling {% include atom.icon.html value="external" %}</a> IVBO ophaalrondes opgedeeld per sector met gewichten per fractie voor de maand mei.</li>
-            <li class="c-list-small__item">Klimaatopwarmngen: <a href="https://klimaat.vmm.be/kaartapplicatie-thema-1" target="_blank" class="c-link c-link--faux">Voorspellingen{% include atom.icon.html value="external" %}</a></li>
-          </ul>
-          <p class="c-para-small">Alle Open Data over Milieu je op het <a href="https://www.brugge.be/open-data-milieu-natuur" target="_blank" class="c-link c-link--faux">Open Data Portaal {% include atom.icon.html value="external" %}</a></p>
+            <li class="c-list-small__item">Data binnen kort beschikbaar</li>
+           </ul>
         </div>
         <div class="o-layout__item u-1/3@medium">
-          <h3 class="c-small-title js-collapsed__title">Minder duidelijke data</h3>
-          <p class="c-para-small">Info waarmee je iets kan uit leren over milieu, ideaal om te mixen.</p>
+          <h3 class="c-small-title js-collapsed__title">Bouw het zelf</h3>
+          <p class="c-para-small">Goesting om een nieuwe dataset op te bouwen? Dat mag ook. Als je aan de slag gaat met sensoren om beleving te meten is het goed dat de data achteraf weer bruikbaar is. Duidelijke structuur, gekuiste info en met goeie metadata. </p>
           <ul class="o-list-bare c-list-small">
-            <li class="c-list-small__item"><a href="https://apps.energiesparen.be/zonnekaart" target="_blank" class="c-link c-link--faux">Potentieel zonnepanelen {% include atom.icon.html value="external" %}</a> of gewoon waar je het best bruin wordt.</li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-mobiliteit#vtiv" target="_blank" class="c-link c-link--faux">Over Auto's {% include atom.icon.html value="external" %}</a>: waar ze bijvoorbeeld 90 mogen of met hoevelen ze de stad binnenkomen.</li>
-            <li class="c-list-small__item">Waar <a href="https://www.brugge.be/open-data-grondgebied#Bedrijventerreinen" target="_blank" class="c-link c-link--faux">de bedrijventerreinen {% include atom.icon.html value="external" %}</a>zich bevinden</li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-grondgebied#energieverbruik" target="_blank" class="c-link c-link--faux">Energieverbruik {% include atom.icon.html value="external" %}</a>: Vlaamse kaartinfo. Vooral info over natuurlijke gegevens als hoogtes en overstromingsgebieden</li>
-            <li class="c-list-small__item"><a href="https://www.brugge.be/open-data-grondgebied#GroenBr" target="_blank" class="c-link c-link--faux">Groeninventaris {% include atom.icon.html value="external" %}</a>: open data van bibliotheken en musea</li>
-            <li class="c-list-small__item"><a href="https://www.natuurpunt.be/pagina/betonrapport-van-vlaamse-gemeenten-en-provincies" target="_blank" class="c-link c-link--faux">Betonrapport {% include atom.icon.html value="external" %}</a>: hoe meer beton, hoe moeilijker het water weg kan bij overstromingen</li>
-            <li class="c-list-small__item"><a href="https://foodlab.brugge.be/" target="_blank" class="c-link c-link--faux">Duurzame voeding {% include atom.icon.html value="external" %}</a>: het Brugse Foodlab</li>
-            
+            <li class="c-list-small__item">Meer hierover in <a href="https://speakerdeck.com/pietercolpaert/an-introduction-to-open-data" target="_blank" class="c-link c-link--faux">de slides van Pieter Colpaert {% include atom.icon.html value="external" %}</a> </li>
           
           </ul>
-          <p class="c-para-small">Of snuister door alle data van <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">Stad Brugge {% include atom.icon.html value="external" %}</a></p>
+      
 
         </div>
         <div class="o-layout__item u-1/3@medium">
-          <h3 class="c-small-title js-collapsed__title">Vlaamsche Datasets</h3>
+          <h3 class="c-small-title js-collapsed__title">Nog relevante data</h3>
           <p class="c-para-small">Binnen verschillende thema's heeft Vlaanderen maar ook de regio rond Brugge verschillende datasets beschikbaar. Gewoon snoepen.</p>
           <ul class="o-list-bare c-list-small">
             <li class="c-list-small__item"><a href="https://opendata.vlaanderen.be/dataset?q=milieu" target="_blank" class="c-link c-link--faux">Open data portaal EU {% include atom.icon.html value="external" %}</a>: meer dan 10k datasets over alles wat je op europees niveau wil bijhouden.</li>
             <li class="c-list-small__item"><a href="https://data.gov.be/nl" target="_blank" class="c-link c-link--faux">Data.gov {% include atom.icon.html value="external" %}</a>: 6500 datasets in allerlei onderwerpen op nationaal niveau</li>
-            <li class="c-list-small__item"><a href="https://download.agiv.be/catalogus" target="_blank" class="c-link c-link--faux">Agentschap voor geografische info {% include atom.icon.html value="external" %}</a>: Vlaamse kaartinfo. Vooral info over natuurlijke gegevens als hoogtes en overstromingsgebieden</li>
-            <li class="c-list-small__item">De resultaten van <a href="https://viewer.curieuzeneuzen.be/" target="_blank" class="c-link c-link--faux">het Curiuezeneuze onderzoek {% include atom.icon.html value="external" %}</a> die hun data nog niet wilden vrijgeven</li>
+            <li class="c-list-small__item">Kortrijksanen krijgen cultuurtips op maat, een <a href="https://www.cultuurconnect.be/uitgezocht" target="_blank" class="c-link c-link--faux">onderzoek door Cultuurconnect {% include atom.icon.html value="external" %}</a>. Lezen die handel</li>
+            <li class="c-list-small__item"><a href="https://www.cultuurconnect.be/diensten/mijnleestipper" target="_blank" class="c-link c-link--faux">Leestipper {% include atom.icon.html value="external" %}</a>: een soort discover weekly voor boeken: </li>
+
+            <li class="c-list-small__item">Of snuister door alle data van <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">Stad Brugge {% include atom.icon.html value="external" %}</a></li>
           </ul>
         </div>
       </div>
