--- a/_layouts/template-index.html
+++ b/_layouts/template-index.html
@@ -139,24 +139,26 @@ layout: default
       <div class="o-layout u-divider-top">
         <div class="o-layout__item u-1/3@medium">
           <h3 class="c-small-title">Alles over bezoeken</h3>
-          <p class="c-para-small">Alle Brugse cultuurhuizen gebruiken hetzelfde systeem om bezoekers te registreren. Hier kunnen we welke voorstellingen of optredens mensen gaan bekijken zijn: van Concertgebouw over Stadschouwburg tot Biekorf. </p>
-          <p class="c-para-small">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden proper opgelijst met metadata en al!
-</p>
-          <p class="c-para-small">In 2015 deed Ugent een bevraging van iedereen die langskwam en daar komen we meer te weten over de levensstijl van de bezoekers
- </p>
+               <ul class="o-list-bare c-list-small">
+           <li class="c-list-small__item">Alle Brugse cultuurhuizen gebruiken hetzelfde systeem om bezoekers te registreren. Hier kunnen we welke voorstellingen of optredens mensen gaan bekijken zijn: van Concertgebouw over Stadschouwburg tot Biekorf. </li>
+           <li class="c-list-small__item">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden proper opgelijst met metadata en al!
+</li>
+           <li class="c-list-small__item">In 2015 deed Ugent een bevraging van iedereen die langskwam en daar komen we meer te weten over de levensstijl van de bezoekers
+ </li>
 
-          <ul class="o-list-bare c-list-small">
-            <li class="c-list-small__item">Data binnen kort beschikbaar</li>
+     
+            
            </ul>
+  <p class="c-para-small"> Data binnen kort beschikbaar</p>
         </div>
         <div class="o-layout__item u-1/3@medium">
           <h3 class="c-small-title js-collapsed__title">Bouw het zelf</h3>
-          <p class="c-para-small">Goesting om een nieuwe dataset op te bouwen? Dat mag ook. Als je aan de slag gaat met sensoren om beleving te meten is het goed dat de data achteraf weer bruikbaar is. Duidelijke structuur, gekuiste info en met goeie metadata. </p>
           <ul class="o-list-bare c-list-small">
-            <li class="c-list-small__item">Meer hierover in <a href="https://speakerdeck.com/pietercolpaert/an-introduction-to-open-data" target="_blank" class="c-link c-link--faux">de slides van Pieter Colpaert {% include atom.icon.html value="external" %}</a> </li>
-          
+           
+            <li class="c-list-small__item">Goesting om een nieuwe dataset op te bouwen? Dat mag ook. Als je aan de slag gaat met sensoren om beleving te meten is het goed dat de data achteraf weer bruikbaar is. Duidelijke structuur, gekuiste info en met goeie metadata. </li>
+
           </ul>
-      
+        <p class="c-para-small"> Meer hierover in <a href="https://speakerdeck.com/pietercolpaert/an-introduction-to-open-data" target="_blank" class="c-link c-link--faux">de slides van Pieter Colpaert {% include atom.icon.html value="external" %}</a></p>
 
         </div>
         <div class="o-layout__item u-1/3@medium">
