added Bruges open data

--- a/_layouts/template-index.html
+++ b/_layouts/template-index.html
@@ -144,6 +144,7 @@ layout: default
            <li class="c-list-small__item">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden proper opgelijst met metadata en al!
 </li>
            <li class="c-list-small__item">In 2015 deed Ugent een bevraging van iedereen die langskwam en daar komen we meer te weten over de levensstijl van de bezoekers
+ </li> <li class="c-list-small__item">Al deze zaligheden kunnen we koppelen aan <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">de nabijheid van cultuurhuizen en leestempels</a>.
  </li>
 
      
