--- a/_layouts/template-index.html
+++ b/_layouts/template-index.html
@@ -141,16 +141,15 @@ layout: default
           <h3 class="c-small-title">Alles over bezoeken</h3>
                <ul class="o-list-bare c-list-small">
            <li class="c-list-small__item">Alle Brugse cultuurhuizen gebruiken hetzelfde systeem om bezoekers te registreren. Hier kunnen we welke voorstellingen of optredens mensen gaan bekijken zijn: van Concertgebouw over Stadschouwburg tot Biekorf. </li>
-           <li class="c-list-small__item">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden proper opgelijst met metadata en al!
+           <li class="c-list-small__item">Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden <a href="https://drive.google.com/file/d/1slidfOq_LnOYQKUaOtPvTnv8tcKm3Oh-">proper opgelijst met metadata en al!</a>
 </li>
-           <li class="c-list-small__item">In 2015 deed Ugent een bevraging van iedereen die langskwam en daar komen we meer te weten over de levensstijl van de bezoekers
  </li> <li class="c-list-small__item">Al deze zaligheden kunnen we koppelen aan <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">de nabijheid van cultuurhuizen en leestempels</a>.
  </li>
 
      
             
            </ul>
-  <p class="c-para-small"> Data binnen kort beschikbaar</p>
+ 
         </div>
         <div class="o-layout__item u-1/3@medium">
           <h3 class="c-small-title js-collapsed__title">Bouw het zelf</h3>
