added link icon

--- a/_layouts/template-index.html
+++ b/_layouts/template-index.html
@@ -141,14 +141,14 @@ layout: default
           <h3 class="c-small-title">Alles over bezoeken</h3>
                <ul class="o-list-bare c-list-small">
            <li class="c-list-small__item">Alle Brugse cultuurhuizen gebruiken hetzelfde systeem om bezoekers te registreren. Hier kunnen we welke voorstellingen of optredens mensen gaan bekijken zijn: van Concertgebouw over Stadschouwburg tot Biekorf. <br><br>
-        Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden <a href="https://drive.google.com/file/d/1slidfOq_LnOYQKUaOtPvTnv8tcKm3Oh-" class="c-link c-link--faux">proper opgelijst met metadata en al!</a>
+        Daarnaast zijn alle voorstellingen die ooit in het concertgebouw hebben plaats gevonden <a href="https://drive.google.com/file/d/1slidfOq_LnOYQKUaOtPvTnv8tcKm3Oh-" class="c-link c-link--faux">proper opgelijst met metadata en al! {% include atom.icon.html value="external" %}</a>
 </li>              
                  
  </li> 
-     <li class="c-list-small__item">Publiq houdt in zijn UITdatabank alle culturele gebeurtenissen bij en daar is <a href="https://documentatie.uitdatabank.be/content/search_api_3/latest/getting-started.html" class="c-link c-link--faux">een API</a> van. Vraag ons naar de Keys.</li>
-    <li class="c-list-small__item">Iets doen met schilderijen? Geen probleem, alle <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_sum_of_all_paintings/Collection/Groeningemuseum" class="c-link c-link--faux">wat in Groeninge hangt</a> staat proper op WikiData.</li>
+     <li class="c-list-small__item">Publiq houdt in zijn UITdatabank alle culturele gebeurtenissen bij en daar is <a href="https://documentatie.uitdatabank.be/content/search_api_3/latest/getting-started.html" class="c-link c-link--faux">een API {% include atom.icon.html value="external" %}</a> van. Vraag ons naar de Keys.</li>
+    <li class="c-list-small__item">Iets doen met schilderijen? Geen probleem, alle <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_sum_of_all_paintings/Collection/Groeningemuseum" class="c-link c-link--faux">wat in Groeninge hangt {% include atom.icon.html value="external" %}</a> staat proper op WikiData.</li>
  
-          <li class="c-list-small__item">Al deze zaligheden kunnen we koppelen aan <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">de nabijheid van cultuurhuizen en leestempels</a>.
+          <li class="c-list-small__item">Al deze zaligheden kunnen we koppelen aan <a href="https://www.brugge.be/opendata" target="_blank" class="c-link c-link--faux">de nabijheid van cultuurhuizen en leestempels {% include atom.icon.html value="external" %}</a>.
  </li>
 
      
